--- a/package.json
+++ b/package.json
@@ -56,5 +56,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "Azeem Shaik <azeemshaik025@gmail.com>",
+  "license": "ISC",
+  "repository": "https://github.com/Azeem-0/EcommerceAppClient.git"
 }
