--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-multi-carousel": "^2.8.4",
     "react-paginate": "^8.2.0",
     "react-phone-number-input": "^3.3.6",
     "react-responsive-carousel": "^3.2.23",
