--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-slideshow-image": "^4.2.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
