--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/styled-engine-sc": "^5.14.8",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,6 +17,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "lottie-react": "^2.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
