--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.2.1",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.4",
     "styled-components": "^6.0.7",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.0"
