--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/styled-engine-sc": "^5.14.8",
     "@react-oauth/google": "^0.12.1",
+    "@stripe/stripe-js": "^3.0.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
